<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>net.lonzak.common</groupId>
	<artifactId>unittest-utilities</artifactId>
	<name>Automating junit tests</name>
	<version>3.0.1</version>

	<description>Utilities for automated DTO tests</description>
 
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>	

	<licenses>
		<license>
			<name>LGPL 2.1</name>
			<url>https://www.gnu.org/licenses/lgpl-2.1.txt</url>
			<comments>This software is licensed under a LGPL 2.1. See the license.txt file in the license folder.</comments>
		</license>
    </licenses>
	
	<developers>
        <developer>
			<id>Lonzak</id>
			<name></name>
        </developer>
    </developers>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>				
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>				
				<configuration>
					<source>17</source>
					<target>17</target>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
	   		</plugin>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-source-plugin</artifactId>
			  <version>3.3.1</version>
			  <executions>
				<execution>
				  <id>attach-sources</id>
				  <goals>
					<goal>jar-no-fork</goal>
				  </goals>
				</execution>
			  </executions>
			</plugin>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-javadoc-plugin</artifactId>
			  <version>3.11.1</version>
			  <executions>
				<execution>
				  <id>attach-javadocs</id>
				  <goals>
					<goal>jar</goal>
				  </goals>
				</execution>
			  </executions>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
        <!-- To allow jdoc creation under jdk8-->
        <profile>
            <id>disable-java8-doclint</id>
            <activation>
                <jdk>[1.8,)</jdk>
            </activation>
            <properties>
                <doclint>none</doclint>
            </properties>
        </profile>
	</profiles>
	
	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
  			<artifactId>commons-lang3</artifactId>
  			<version>3.17.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
		    <groupId>jakarta.activation</groupId>
		    <artifactId>jakarta.activation-api</artifactId>
		    <version>2.1.3</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.18.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<scm>
		<connection>scm:git:git://github.com/Lonzak/unittest-utilities.git</connection>
		<developerConnection>scm:git:git@github.com:Lonzak/unittest-utilities.git</developerConnection>
		<url>https://github.com/Lonzak/unittest-utilities</url>
	</scm>
</project>
